--- a/user-profile.html
+++ b/user-profile.html
@@ -17,6 +17,7 @@
         }
 
         .profile-box {
+            width:100%;
             background: linear-gradient(95deg, lightpink, lightpink);
         }
 
